BuildHughes/translation-tool/inputs/source_meta/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Shipment_Carrier__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Applicable in case hardware asset is directly shipped to the Customer</description>
        <inlineHelpText>Shipment Carrier</inlineHelpText>
        <label>Shipment Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking_Number__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Applicable in case hardware asset is directly shipped to the Customer</description>
        <inlineHelpText>Shipment Tracking Number</inlineHelpText>
        <label>Shipment Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Category__c</fullName>
        <description>Site Category</description>
        <inlineHelpText>Site Category</inlineHelpText>
        <label>Site Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Opn_Mode__c</fullName>
        <description>Site Opn Mode</description>
        <label>Site Opn Mode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <description>Software Version</description>
        <inlineHelpText>Software Version</inlineHelpText>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source</description>
        <inlineHelpText>Source</inlineHelpText>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Code_Change_Date__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Specify when the status was changed</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Specify when the status was changed</inlineHelpText>
        <label>Status Reason Code Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Code_Description__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Description of the Status Reason Code</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Description of the Status Reason Code</inlineHelpText>
        <label>Status Reason Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Code__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Specify if the site is locked for non payments, voluntary termination etc.</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Specify if the site is locked for non payments, voluntary termination etc.</inlineHelpText>
        <label>Status Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOG__c</fullName>
        <description>The Other Gateway</description>
        <inlineHelpText>The Other Gateway</inlineHelpText>
        <label>TOG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminal_Activation_date__c</fullName>
        <description>Terminal Activation date</description>
        <inlineHelpText>Terminal Activation date</inlineHelpText>
        <label>Terminal Activation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transponder__c</fullName>
        <description>For Hughes Assets: N/A

For Customer Assets: Only for VSATs</description>
        <inlineHelpText>For Hughes Assets: N/A

For Customer Assets: Only for VSATs</inlineHelpText>
        <label>Transponder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Offering_Name__c</fullName>
        <description>Indicates actual transport service offering name being sold to the customer</description>
        <label>Transport Offering Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Unit of Measure</description>
        <inlineHelpText>Unit of Measure</inlineHelpText>
        <label>Unit of Measure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplink_Cellid__c</fullName>
        <description>Uplink Cellid</description>
        <inlineHelpText>Uplink Cellid</inlineHelpText>
        <label>Uplink Cellid</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uplink_Speed__c</fullName>
        <description>Uplink Speed</description>
        <inlineHelpText>Uplink Speed</inlineHelpText>
        <label>Uplink Speed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VADB_Backup_Phone__c</fullName>
        <description>VADB Backup Phone</description>
        <inlineHelpText>VADB Backup Phone</inlineHelpText>
        <label>VADB Backup Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VADB_Enable__c</fullName>
        <description>VADB Enable</description>
        <inlineHelpText>VADB Enable</inlineHelpText>
        <label>VADB Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VADB_Primary_Phone__c</fullName>
        <description>VADB Primary Phone</description>
        <inlineHelpText>VADB Primary Phone</inlineHelpText>
        <label>VADB Primary Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPGW__c</fullName>
        <description>VPGW</description>
        <inlineHelpText>VPGW</inlineHelpText>
        <label>VPGW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSAT_Antenna__c</fullName>
        <label>VSAT Antenna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Name i.e NAP Source</description>
        <label>NAP/Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_SubName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Sub Name, i.e NAP Sub Type</description>
        <label>Vendor SubName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Vendor SubName)</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Commitment_Term_End_Date__c</fullName>
        <description>Applicable for B2C only in case customer purchases Express Repair.</description>
        <inlineHelpText>Applicable for B2C only in case customer purchases Express Repair.</inlineHelpText>
        <label>Warranty Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Effective_Date__c</fullName>
        <description>Applicable for B2C only in case customer purchases Express Repair. Indicate the date when Customer Purchases Express repair.</description>
        <inlineHelpText>Applicable for B2C only in case customer purchases Express Repair. Indicate the date when Customer Purchases Express repair.</inlineHelpText>
        <label>Warranty Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <description>Warranty Expiration Date</description>
        <inlineHelpText>Warranty Expiration Date</inlineHelpText>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiry_Date__c</fullName>
        <description>Warranty Expiry Date</description>
        <inlineHelpText>Warranty Expiry Date</inlineHelpText>
        <label>Warranty Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Vesting_Period_End_Date__c</fullName>
        <description>Applicable for B2C only in case customer purchases Express Repair.</description>
        <inlineHelpText>Applicable for B2C only in case customer purchases Express Repair.</inlineHelpText>
        <label>Warranty Vesting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hardware_program__c</fullName>
        <description>Hardware Program, Used to show the Type of Hardware the Customer Used, like Lease, Purchase</description>
        <label>hardware program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>HSvc_LockDate__c</fullName>
        <description>DI sync Lock Date from IP to this field and it is used in Account Transaction</description>
        <label>Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HNS_Product_Service_Plan__c</fullName>
        <description>HNS Product Service Plan</description>
        <label>HNS Product Service Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>